@@ -1,3 +1,8 @@
+2007-04-25 Tim
+ RFE: [ 1700099 ] Web: Mailing list page?
+  Web: page.inc sitemap.txt
+  Web\support: new file mailing-lists.php
+
 2007-04-14 Tim
  PATCH: [ 1700349 ] Web: Move developers area to Wiki
   Web: .htaccess index.php page.inc sitemap.txt
